added ps3 solution and exam 2 practice

--- a/ps.html
+++ b/ps.html
@@ -22,6 +22,8 @@
     <h2><a href="https://docs.google.com/a/utexas.edu/document/d/1u14-jaV9Ne-MQsDzMF8fLw7HG8cw6XK2fBXLxzaopwU/">Problem Set 3</a>
     <font color="red" size="-1">(last updated - 03/16/14)</font></h2> 
     <ul>
+      <li><a href="https://docs.google.com/a/utexas.edu/document/d/1vrhA7iiEZHzgbW1yScABAGZIxRPbwe2SqylkNVlfMKs/">Solution</a>
+      <font color="red" size="-1">(posted - 03/29/14)</font></li>
       <li><em>Due Mar 24, before class</em></li>
       <li><em>Problems marked in Red have been moved to PS4</em></li>
       <li><em>Problem Sets should be submitted electronically on BlackBoard</em></li>
