--- a/handouts.html
+++ b/handouts.html
@@ -34,15 +34,14 @@
 <h2>Exams</h2>
 <ul>
   <li><p>Old Exams can be accessed from <a href="http://users.ece.utexas.edu/~patt">Dr. Patt's Website</a></p></li>
-  <li><p>You can look up past exams from previous year's websites, accessible from Dr. Patt's home page. Included below are exams not found on previous year's websites.</p></li>
 
-  <li>Exam 1
+  <li>Practice for Exam 1
     <ul>
-      <li><p><a href="handouts/s14_exam1.pdf">Spring 2014 Exam 1</a> and <a
+      <li><p><a href="handouts/s14_exam1.pdf">Spring 2014 see questions</a> and <a
         href="handouts/s14_exam1_sol.pdf">Solution</a> <font color="red"
         size="-1"> (posted - 03/04/14)</font> </p></li>
       <li><p><a href="handouts/f13_exam1.pdf">Fall 2013 Exam 1</a> and <a
-        href="handouts/f13_exam1_sol.pdf">Solution</a> (see questions: 1a, 5) <font color="red"
+        href="handouts/f13_exam1_sol.pdf">Solution</a> (see questions: 1a, 5)<font color="red"
         size="-1"> (posted - 02/20/14)</font> </p></li>
       <li><p><a href="handouts/s13_exam1.pdf">Spring 2013 Exam 1</a> and <a
         href="handouts/s13_exam1_sol.pdf">Solution</a> (see questions: 1b, 2*, 3, 5)<font color="red"
@@ -50,11 +49,6 @@
       <li><p><a href="handouts/s11_exam1.pdf">Spring 2011 Exam 1</a> and <a
         href="handouts/s11_exam1_sol.pdf">Solution</a> (see questions: 1b, 1c, 2*, 5)<font color="red"
         size="-1"> (posted - 02/20/14)</font> </p></li>
-    </ul>
-  </li>
-
-  <li>Exam 2
-    <ul>
       <li><p><a href="handouts/f13_exam2.pdf">Fall 2013 Exam 2</a> and <a
         href="handouts/f13_exam2_sol.pdf">Solution</a> (see questions: 1b, 1c, 3*, 4)<font color="red"
         size="-1"> (posted - 02/20/14)</font> </p></li>
@@ -64,14 +58,41 @@
       <li><p><a href="handouts/s11_exam2.pdf">Spring 2011 Exam 2</a> and <a
         href="handouts/s11_exam2_sol.pdf">Solution</a> (see questions: 1b, 1d, 3, 4)<font color="red"
         size="-1"> (posted - 02/20/14)</font> </p></li>
+      <li><p><a href="handouts/s11_final.pdf">Spring 2011 Final</a> and <a
+        href="handouts/s11_final_sol.pdf">Solution </a> (see questions: 1b, 1e, 4, 5, 6)<font color="red"
+        size="-1"> (posted - 02/20/14)</font> </p></li>
+    </ul>
+  </li>
+
+  <li>Practice for Exam 2
+    <ul>
+      <li><p><a href="handouts/f13_exam1.pdf">Fall 2013 Exam 1</a> and <a
+        href="handouts/f13_exam1_sol.pdf">Solution</a> (see questions: all questions)<font color="red"
+        size="-1"> (posted - 03/29/14)</font> </p></li>
+      <li><p><a href="handouts/s13_exam1.pdf">Spring 2013 Exam 1</a> and <a
+        href="handouts/s13_exam1_sol.pdf">Solution</a> (see questions: 1a, 1b, 1d, 2, 4, 5)<font color="red"
+        size="-1"> (posted - 03/29/14)</font> </p></li>
+      <li><p><a href="handouts/s11_exam1.pdf">Spring 2011 Exam 1</a> and <a
+        href="handouts/s11_exam1_sol.pdf">Solution</a> (see questions: all questions)<font color="red"
+        size="-1"> (posted - 03/29/14)</font> </p></li>
+      <li><p><a href="handouts/f13_exam2.pdf">Fall 2013 Exam 2</a> and <a
+        href="handouts/f13_exam2_sol.pdf">Solution</a> (see questions: 2, 3)<font color="red"
+        size="-1"> (posted - 03/29/14)</font> </p></li>
+      <li><p><a href="handouts/s13_exam2.pdf">Spring 2013 Exam 2</a> and <a
+        href="handouts/s13_exam2_sol.pdf">Solution</a> (see questions: 1a, 1c, 2a)<font color="red"
+        size="-1"> (posted - 03/29/14)</font> </p></li>
+      <li><p><a href="handouts/s11_exam2.pdf">Spring 2011 Exam 2</a> and <a
+        href="handouts/s11_exam2_sol.pdf">Solution</a> (see questions: 1d, 2)<font color="red"
+        size="-1"> (posted - 03/29/14)</font> </p></li>
+      <li><p><a href="handouts/s11_final.pdf">Spring 2011 Final</a> and <a
+        href="handouts/s11_final_sol.pdf">Solution </a> (see questions: 1, 3, 4)<font color="red"
+        size="-1"> (posted - 03/29/14)</font> </p></li>
     </ul>
   </li>
 
   <li>Final
     <ul>
-      <li><p><a href="handouts/s11_final.pdf">Spring 2011 Final</a> and <a
-        href="handouts/s11_final_sol.pdf">Solution </a> (see questions: 1b, 1e, 4, 5, 6)<font color="red"
-        size="-1"> (posted - 02/20/14)</font> </p></li>
+      
     </ul>
   </li>
 </ul>
