moved files to proper locations and added ps4 sol

--- a/ps.html
+++ b/ps.html
@@ -12,9 +12,17 @@
     <h1>Spring, 2014</h1>
     <hr />
 
+    <!--<h2><a href="https://docs.google.com/a/utexas.edu/document/d/1K4T3zMmpZDqFk2BUNc4TRrFIgHfoIxs2BbSxeqRu5Zg/">Physical Memory Problems</a>-->
+    <!--<font color="red" size="-1">(last updated - 04/07/14)</font></h2> -->
+    <!--<ul>-->
+      <!--<li><em>These problems are for review purposes, but will be on the next problem set.</em></li>-->
+    <!--</ul>-->
+
     <h2><a href="https://docs.google.com/a/utexas.edu/document/d/1ZahRqxYGAZePEoRx5OAX7BhaRpC6Zky3CAHo5yuh0SA/">Problem Set 4</a>
     <font color="red" size="-1">(posted - 03/26/14)</font></h2> 
     <ul>
+      <li><a href="https://docs.google.com/a/utexas.edu/document/d/1AvuWLpTiDLYI5xsHXv36u46Eub5dBWzS38fa9PEIYlQ/">Solution</a>
+      <font color="red" size="-1">(posted - 04/07/14)</font></li>
       <li><em>Due Mar 31, before class</em></li>
       <li><em>Problem Sets should be submitted electronically on BlackBoard</em></li>
     </ul>
