--- a/handouts.html
+++ b/handouts.html
@@ -85,7 +85,7 @@
         href="handouts/s11_exam2_sol.pdf">Solution</a> (see questions: 1d, 2)<font color="red"
         size="-1"> (posted - 03/29/14)</font> </p></li>
       <li><p><a href="handouts/s11_final.pdf">Spring 2011 Final</a> and <a
-        href="handouts/s11_final_sol.pdf">Solution </a> (see questions: 1, 3, 4)<font color="red"
+        href="handouts/s11_final_sol.pdf">Solution </a> (see questions: 3, 4)<font color="red"
         size="-1"> (posted - 03/29/14)</font> </p></li>
     </ul>
   </li>
