--- a/handouts.html
+++ b/handouts.html
@@ -84,7 +84,7 @@
       <li><p><a href="handouts/s11_exam2.pdf">Spring 2011 Exam 2</a> and <a
         href="handouts/s11_exam2_sol.pdf">Solution</a> (see questions: 1d, 2)<font color="red"
         size="-1"> (posted - 03/29/14)</font> </p></li>
-      <li><p><a href="handouts/f13_final.pdf">Spring 2013 Final (see questions 1a, 1b, 1d, 1e, 2, 3, 5)</a><font color="red"
+      <li><p><a href="handouts/f13_final.pdf">Spring 2013 Final</a> (see questions 1a, 1b, 1d, 1e, 2, 3, 5)<font color="red"
         size="-1"> (posted - 04/11/14)</font> </p></li>
       <li><p><a href="handouts/s11_final.pdf">Spring 2011 Final</a> and <a
         href="handouts/s11_final_sol.pdf">Solution </a> (see questions: 3, 4)<font color="red"
