--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
     All classes, discussion sections, and office hours canceled January 28, 2014</font></p></h3></center></blink>
     -->
 
-    <!--
     <center><h4><font color="red" size=+1>
-    <p>Exam 1 Information:<br>
-    <p>February 26, 5:00-6:30 PM<br>
-    <p>WEL 2.246</font></h4></center>
-    -->
+    <p>Exam 2 Information:<br>
+    <p>April 16, 5:00-6:30 PM<br>
+    <p>PHR 2.110</font></h4></center>
 
    <!--  blinky notice script -->
    <script type="text/javascript">
