--- a/handouts.html
+++ b/handouts.html
@@ -37,7 +37,7 @@
 
   <li>Practice for Exam 1
     <ul>
-      <li><p><a href="handouts/s14_exam1.pdf">Spring 2014 see questions</a> and <a
+      <li><p><a href="handouts/s14_exam1.pdf">Spring 2014 Exam 1</a> and <a
         href="handouts/s14_exam1_sol.pdf">Solution</a> <font color="red"
         size="-1"> (posted - 03/04/14)</font> </p></li>
       <li><p><a href="handouts/f13_exam1.pdf">Fall 2013 Exam 1</a> and <a
@@ -66,6 +66,9 @@
 
   <li>Practice for Exam 2
     <ul>
+      <li><p><a href="handouts/s14_exam2.pdf">Spring 2014 Exam 2</a>
+        <font color="red"
+        size="-1"> (posted - 04/20/14)</font> </p></li>
       <li><p><a href="handouts/f13_exam1.pdf">Fall 2013 Exam 1</a> and <a
         href="handouts/f13_exam1_sol.pdf">Solution</a> (see questions: all questions)<font color="red"
         size="-1"> (posted - 03/29/14)</font> </p></li>
