--- a/labs.html
+++ b/labs.html
@@ -30,6 +30,41 @@ account. </li>
 <li><a href="http://www.unknownroad.com/rtfm/gdbtut/gdbtoc.html">GDB</a>, a command-line debugger for linux.  To use GDB, be sure to include the "-g" flag when you compile with gcc.</li>
 </ul>
 
+<h2><a href="https://docs.google.com/a/utexas.edu/document/d/1VwjTj_9lkNWWe0h8V80ZnTrhtNntk7f8jAgUPmPvBoM/" title ="Lab6 instructions">Lab Assignment 6</a>
+  <font color="red" size="-1">(posted - 04/21/14)</font></h2>
+<p><em>Due: Mar 2 5:00 pm</em></p>
+<ul>
+  <li><a href="labs/lab6/Lab6Submit.html" title="Lab Assignment 6 submission instructions">Submission instructions</a>
+  <font color="red" size="-1">(posted - 04/21/14)</font></li>
+  <li><a href="labs/lab6/control_store_lab6.xls" title="Control store template in Excel format">The control store template in Excel format</a>
+  <font color="red" size="-1">(posted - 04/21/14)</font></li>
+  <li>Sample simulator runs to help you in debugging your simulator
+  (Each of the hex files were simulated cycle by cycle using the "run 1"
+  command and an "idump" was performed after each cycle. *.dump files
+  show the cycle by cycle output of idump. *.state files summarize the
+  contents of the pipeline latches. *.timeline shows a timeline of the
+  execution of the program in the pipeline):
+
+  <ul>
+    <li><a href="labs/lab6/example/example0.asm">example0.asm</a>,
+    <a href="labs/lab6/example/example0.hex">example0.hex</a>,
+    <a href="labs/lab6/example/example0.dump">example0.dump</a>,
+    <a href="labs/lab6/example/example0.state">example0.state</a>,
+    <a href="labs/lab6/example/example0.timeline">example0.timeline</a>
+    </li>
+    <li><a href="labs/lab6/example/example1.asm">example1.asm</a>,
+    <a href="labs/lab6/example/example1.hex">example1.hex</a>,
+    <a href="labs/lab6/example/example1.dump">example1.dump</a>,
+    <a href="labs/lab6/example/example1.state">example1.state</a>,
+    <a href="labs/lab6/example/example1.timeline">example1.timeline</a>
+    </li>
+  </ul>
+
+  <p>Note that these test cases are not meant to be exhaustive. You should
+  write your own test cases to make sure that your simulator is working
+  for every instruction and program.</p>
+</ul>
+
 <h2><a href="https://docs.google.com/a/utexas.edu/document/d/1BLQlk3B8VOl7LZmXukSY_-trrDybEychqVcIPUv_xZg" title ="Lab4 instructions">Lab Assignment 5</a>
   <font color="red" size="-1">(posted - 03/25/14)</font></h2>
 <p><em>Due: Apr 6 11:59 pm</em></p>
