--- a/labs/lab6/Lab6Submit.html
+++ b/labs/lab6/Lab6Submit.html
@@ -1,29 +1,33 @@
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-
 <head>
-<title>EE 460N - Lab Submission Instructions</title>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<title>EE 460N: Lab Assignment 5 Submission Instructions</title>
+<link rel="StyleSheet" type="text/css" href="../../main.css" />
+<link rel="StyleSheet" type="text/css" href="../labs.css" />
 </head>
-
-<body bgcolor="white">
+<body>
 
 <center>
 <h2>Department of Electrical and Computer Engineering</h2>
 <h3>The University of Texas at Austin</h3>
 </center>
 
-
+EE 460N, Spring 2014<br />
 Submission Instructions for Lab Assignment 6<br />
+Due: Friday, May 2, 2014, 5:00 pm<br />
 
+<h2>Important Notes</h2>
 You must use the following naming convention for the files in Lab 6.
 <ul>
 <li>
-lc3bsim6.c - The C source code for your pipelined LC-3b simulator.
+<tt>lc3bsim6.c</tt> &ndash; The C source code for your pipelined LC-3b simulator.
 </li>
 <li>
-ucode6     - The microcode file for your pipelined simulator
+<tt>ucode6</tt>      &ndash; The microcode file for your pipelined simulator.
 </li>
-
-
 </ul>
 <p>
 You may not submit more than two files for Lab 6.
@@ -33,12 +37,6 @@ You may not submit more than two files for Lab 6.
   lc3bsim6.c</tt>) and runs on any <b>ECE LRC linux machine before submitting
   your program</b>.  Please issue command <tt>uname</tt> and make sure the
 output is Linux. Note that sunfire machines are not Linux machines.</p>
-
-<p>
-<font color="red">Also, please remove the printf statements you put in
-your program for debugging. The only output to the screen from your
-simulator should be the output initiated by the shell code we have
-provided. </font>
 
 <p>
 
@@ -56,8 +54,8 @@ as a C comment:</p>
 */</code></pre>
 <p>Example:</p>
 <pre><code>/*
-        Name: Faruk Guvenilir
-        UTEID: fguvenilir
+        Name: Chirag Sakhuja
+        UTEID: csakhuja
 */</code></pre>
 </li>
 </ul>
