--- a/ps.html
+++ b/ps.html
@@ -12,6 +12,13 @@
     <h1>Spring, 2014</h1>
     <hr />
 
+    <h2><a href="https://docs.google.com/a/utexas.edu/document/d/1lPhDAIoVnY8xMDJcD3D7Bs61H2cjeApdo_UQXe_-ASg/">Problem Set 5</a>
+    <font color="red" size="-1">(posted - 04/22/14)</font></h2> 
+    <ul>
+      <li><em>Due Apr 28, before class</em></li>
+      <li><em>Problem Sets should be submitted electronically on BlackBoard</em></li>
+    </ul>
+
     <h2><a href="https://docs.google.com/a/utexas.edu/document/d/1K4T3zMmpZDqFk2BUNc4TRrFIgHfoIxs2BbSxeqRu5Zg/">Physical Memory Problems</a>
     <font color="red" size="-1">(posted - 04/08/14)</font></h2> 
     <ul>
