--- a/ps.html
+++ b/ps.html
@@ -12,6 +12,15 @@
     <h1>Spring, 2014</h1>
     <hr />
 
+	<h2><a href="https://docs.google.com/a/utexas.edu/document/d/1vHCzICojAhXWMr9nLIT3bhzNBMwWfZZKkhN08qVMZb0/">Problem Set 6</a>
+    <font color="red" size="-1">(posted - 05/05/14)</font></h2> 
+    <ul>
+      <li><a href="https://docs.google.com/a/utexas.edu/document/d/1ax9FTH5EscDgzSjn2VqT5GmSecBlf8s_abRwpbrHgcs/">Solution</a>
+      <font color="red" size="-1">(posted - 05/05/14)</font></li>
+      <li><em>These problems are for review purposes, and will not be graded.</em></li>
+    </ul>
+
+
     <h2><a href="https://docs.google.com/a/utexas.edu/document/d/1lPhDAIoVnY8xMDJcD3D7Bs61H2cjeApdo_UQXe_-ASg/">Problem Set 5</a>
     <font color="red" size="-1">(posted - 04/22/14)</font></h2> 
     <ul>
