--- a/handouts.html
+++ b/handouts.html
@@ -88,7 +88,7 @@
         href="handouts/s11_exam2_sol.pdf">Solution</a> (see questions: 1d, 2)<font color="red"
         size="-1"> (posted - 03/29/14)</font> </p></li>
       <li><p><a href="handouts/f13_final.pdf">Fall 2013 Final</a> and <a 
-        href="handouts/f13_final_partial_sol.pdf">Solution</a> (see questions 1a, 1b, 1d, 1e, 2, 3, 5)<font color="red"
+        href="handouts/f13_final_sol.pdf">Solution</a> (see questions 1a, 1b, 1d, 1e, 2, 3, 5)<font color="red"
         size="-1"> (posted - 04/14/14)</font> </p></li>
       <li><p><a href="handouts/s11_final.pdf">Spring 2011 Final</a> and <a
         href="handouts/s11_final_sol.pdf">Solution </a> (see questions: 3, 4)<font color="red"
