added ps5 solution

--- a/ps.html
+++ b/ps.html
@@ -24,6 +24,8 @@
     <h2><a href="https://docs.google.com/a/utexas.edu/document/d/1lPhDAIoVnY8xMDJcD3D7Bs61H2cjeApdo_UQXe_-ASg/">Problem Set 5</a>
     <font color="red" size="-1">(posted - 04/22/14)</font></h2> 
     <ul>
+      <li><a href="https://docs.google.com/a/utexas.edu/document/d/1aHjIdyloEjyKWh-YN3AXniBfVdtAiG1sNYKg9eRI11Q/">Solution</a>
+      <font color="red" size="-1">(posted - 05/06/14)</font></li>
       <li><em>Due Apr 28, before class</em></li>
       <li><em>Problem Sets should be submitted electronically on BlackBoard</em></li>
     </ul>
