new room location

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
     
     <center><h4><font color="red" size=+1>
-    <p>Final Exam Information:<br>
+    <p>Final Exam Information (Note that this has been updated):<br>
     <p>May 9, 7:00-10:00 PM<br>
-    <p>GEA 105</font></h4></center>
+    <p>WEL 3.502</font></h4></center>
     
 
    <!--  blinky notice script -->
